# LegalEagle-Server

./: pyproject.toml
chat_model/: Llama.py  Llama2.py  models.py  serializers.py  urls.py  views.py
chat_model/migrations/: 0001_initial.py  0002_delete_query.py
chat_model/templates/: index_rest.html
chat_server/: app.py  requires.txt
server/: settings.py
