[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["panwoo1 <hvcloc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "^4.2.7"
djangorestframework = "^3.14.0"
ctransformers = "^0.2.27"
numpy = "^1.26.2"

transformers = "4.32.1"
huggingface-hub = "^0.19.4"
accelerate = "^0.24.1"
torch = {version = "^2.1.1+cu121", source = "pytorch"}
torchvision = {version = "^0.16.1+cu121", source = "pytorch"}
bitsandbytes = "0.41.1"
scipy = "^1.11.4"
llama-cpp-python = "^0.2.19"
langchain = "^0.0.339"
replicate = "^0.20.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
